update with changes

--- a/Templates/Index.html
+++ b/Templates/Index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
           #toppage{
-    background: url("https://www.science.org.au/curious/sites/default/files/article-banner-image/2-mars-banner.jpg") center center / cover no-repeat;}
+    background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQi2MQOINsXqK5GlcAsoqZTTsdfZw4-igPndg&usqp=CAU")
 
     .btn{
     color:white;
@@ -35,7 +35,24 @@
     width: fit-content;}
 
     figure, img {
-      img {
+      img: {
       @extend .img-fluid;}
   </style>
 </head>
+<body>
+    <!-- Container for the title and scraper button -->
+    <div class="container-fluid" >
+      <div class="jumbotron text-center" id="toppage">
+        <h1 style='color:white'><b>Mission to Mars</b></h1>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+      </div>
+    </div>
+  <h1> Latest Mars News </h1>
+
+  <h1>Featured Mars Image</h1>
+  
+
+
+    
+</body>
+</html>
