last update with screen shots

--- a/Templates/Index.html
+++ b/Templates/Index.html
@@ -79,7 +79,7 @@
           <div class="col-md-4">
             <h2><b>Mars Facts</b></h2>
             <div class="box">
-              {{ mars.Mars_fact | safe }}
+              {{ mars.Mars_facts | safe }}
             </div>
           </div>
         </div>
